# api-processing-ec2-rds

./: .dockerignore  Dockerfile  README.md  README_estruturando.md  README_v1.md  README_v2.md  docker-compose.yaml  perguntas  processos.md  pyproject.toml
data/: bitcoin.csv
docs/: dashboard_details.md  faq_tecnico.md  infra_detais.md  ingestor_details.md
src/: dashboard.py  fetch1.py  fetch2.py  fetch3.py  main.py
src/dev/: fetch1.py  fetch5.py
