[project]
name = "api-processing-ec2-rds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.17",
    "datetime>=6.0",
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "streamlit>=1.52.2",
]
